--- a/Distilbert-App/Distilbert-App.ipynb
+++ b/Distilbert-App/Distilbert-App.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "29d8bdae",
+   "id": "99cac092",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "141d72df",
+   "id": "d9da6e43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "642644d5",
+   "id": "015ac961",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dbc3d33d",
+   "id": "cf9f445d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "87f719c7",
+   "id": "7e5acffc",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0f13f1ac",
+   "id": "aa42e185",
    "metadata": {},
    "outputs": [
     {
@@ -160,8 +160,197 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "d2140cdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fbe7b189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "host = \"localhost\"\n",
+    "port = 5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "38c2c290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"http://localhost:5000\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8bb48452",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c08cd378",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [405]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "317beb2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 3.2 Final//EN\">\n",
+      "<title>405 Method Not Allowed</title>\n",
+      "<h1>Method Not Allowed</h1>\n",
+      "<p>The method is not allowed for the requested URL.</p>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "73e1cf14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"http://localhost:5000\"\n",
+    "data = {\"Review\":\"The Movie is Awesome , I will watch it again\"}\n",
+    "\n",
+    "data = json.dumps(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a9e4fcf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"Review\": \"The Movie is Awesome , I will watch it again\"}'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ba148984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "{\n",
+      "  \"result\": \"pos\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"http://localhost:5000/get_sentiment\"\n",
+    "x = requests.post(url,data)\n",
+    "print(x)\n",
+    "print(x.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8995a325",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"result\": \"neg\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\"Review\":\"The acting was boring ,I waste my time , it was bad movie\"}\n",
+    "\n",
+    "data = json.dumps(data)\n",
+    "url = \"http://localhost:5000/get_sentiment\"\n",
+    "x = requests.post(url,data)\n",
+    "\n",
+    "print(x.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f2d49855",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'result': 'neg'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(x.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c6d2ccab",
+   "id": "6732e167",
    "metadata": {},
    "outputs": [],
    "source": []
